World map generation
World map generation has been implemented, aswell as color change of item marker if you're too far away to pick it up.
TODO: Rewrite ship tile generation code to use a grid to (hopefully) allow collisions with worldtiles and also make placing easier in the future.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,8 @@
      <Compile Include="Assets\ZoneGeneration.cs" />
      <Compile Include="Assets\scripts\Inventory.cs" />
      <Compile Include="Assets\scripts\Item.cs" />
+     <Compile Include="Assets\scripts\Tile.cs" />
+     <Compile Include="Assets\scripts\WorldTile.cs" />
      <Compile Include="Assets\scripts\camera.cs" />
      <Compile Include="Assets\scripts\dredguy.cs" />
      <Compile Include="Assets\scripts\droppedItem.cs" />
